# KaDoTe

./: .gitignore  Client_TUC.py  README.md  Server.py  client.py  eval_types.py  evaluate.py  mvGenTLProducer.cti  networkconfig_default.json  networkconfig_default_with_models.json  pyproject.toml  script_OPCUA_Sara.py  server.py
configs/: camera_calibration.json  camera_position.json  opcua-local.json  opcua-place1-ignition.json  opcua-place1.json  opcua-place2.json  wenglor.json
point_pair_selector/: methods.py  point_pair_selector_3d_support_with_pnp.py
schemas/: opcua-server-config.schema.json  results.schema.json  wenglor-config.schema.json
